gnome-clocks 45.0
=================
 * Port to new libadwaita widgets, including breakpoints
 * Bundle bell sounds
 * GNOME Shell search provider performance improvements
 * Improve location matching by normalizing location search strings
 * Replace deprecated code paths
 * Use xdg-desktop-portal to get system clock format
 * Translation updates

gnome-clocks 44.0
===================
 * Translations updates

gnome-clocks 44.rc
===================
 * Translations updates

gnome-clocks 44.beta
===================
 * Display seconds in the world clock detail view
 * Reset snooze time when disabling alarms
 * Add mnemonics to the view switcher
 * Say ahead/behind instead of later/earlier
 * Fix button layout in the timer view
 * Add missing ellipses to button labels
 * Remove an incorrect tooltip
 * Help fixes
 * Translations updates

gnome-clocks 43.0
===================
 * Translations updates

gnome-clocks 43.beta
===================
 * Port to AdwAboutWindow - Christopher Davis 
 * Fix notifications are immediately withdrawn - Sophie Herold
 * Translations updates

gnome-clocks 43.alpha
===================
 * Build against either geocode-glib-1.0 or geocode-glib-2.0
 * Disable "Add" button by default on new timer dialog
 * Fix the incorrect order of stopwatch's time label using RTL locale
 * Do not match timezones on search
 * Translations updates

gnome-clocks 42.0
===================
 * Translations updates

gnome-clocks 42.alpha
===================
 * Codebase is now ported to GTK 4 and Libadwaita
 * Translations updates

gnome-clocks 41.0
===================
 * Updated translations

gnome-clocks 40.beta
===================
 * World Location Dialog: Match HdyStatusPage styling
 * Added ALT + 1,2,3,4 navigation between pages.
 * Bugfixes & translations updates

gnome-clocks 3.38.0
===================
 * Alarms: Allow setting snooze/ring duration
 * World: Redesign the Add World Clock dialog by Matyáš
 * Various design refinement

gnome-clocks 3.37.91