@@ -52,6 +52,21 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release version="46.rc" date="2024-03-02" type="development">
+      <description>
+        <p>A new release candidate of Clocks</p>
+        <ul>
+          <li>Add mnemonic to Start button</li>
+          <li>Disable alarm after ringing when not set to repeat</li>
+          <li>Fix countdown timer progress during suspend</li>
+          <li>Fix resume bug on clear button pressed</li>
+          <li>Fix sorting of locations</li>
+          <li>Improve app metainfo for AppStream 1.0</li>
+          <li>Show a toast when a new alarm is set</li>
+          <li>Translations updates</li>
+        </ul>
+      </description>
+    </release>
     <release version="45.0" date="2023-09-17">
       <description>
         <p>A new release of Clocks</p>
