@@ -1,3 +1,14 @@
+gnome-clocks 46.rc
+==================
+ * Add mnemonic to Start button
+ * Disable alarm after ringing when not set to repeat
+ * Fix countdown timer progress during suspend
+ * Fix resume bug on clear button pressed
+ * Fix sorting of locations
+ * Improve app metainfo for AppStream 1.0
+ * Show a toast when a new alarm is set
+ * Translations updates
+
 gnome-clocks 45.0
 =================
  * Port to new libadwaita widgets, including breakpoints
